--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.40.1",
-    "@types/node": "^20.10.4"
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-playwright": "^0.22.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "dotenv": "^16.4.1"
-  }
+  },
+  "type": "module"
 }
